--- a/lab01.ipynb
+++ b/lab01.ipynb
@@ -6,10 +6,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "vikashvikashvikashvikashvikashvikashvikashvikashvikashvikash\n"
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'vikash'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m n \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39menter the name\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m a \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(\u001b[39minput\u001b[39;49m(\u001b[39m\"\u001b[39;49m\u001b[39menter the name\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n\u001b[0;32m      3\u001b[0m \u001b[39mprint\u001b[39m(n\u001b[39m*\u001b[39ma)\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'vikash'"
      ]
     }
    ],
@@ -904,24 +908,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vikashvikashvikashvikashvikashvikashvikashvikashvikashvikash\n"
+      "vikashvikashvikashvikashvikashvikashvikashvikashvikashvikashvikashvikash\n"
      ]
     }
    ],
    "source": [
     "n = input(\"enter the name\")\n",
     "a = int(input(\"enter the number\"))\n",
-    "print(n*a)\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(n*a)"
    ]
   },
   {
