--- a/Lab04.ipynb
+++ b/Lab04.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Analysis Part :\n",
+    "*regular project\n",
+    "*product not selling \n",
+    "*highest price\n",
+    "*star product"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here when we will enter all the details on the daily basis, then we get all the data then we can analyse all the data and we can get different kind of insights and we ca define all the things like\n",
+    "which is the regular product that is consistent on the daily basis for examples there is grocery shop and their specific soap is consistant and we can also get different type of insights like which is the least soled product and which product is of the highest price and which is the star product of that particular grocery shop."
+   ]
   }
  ],
  "metadata": {
