--- a/Lab06.ipynb
+++ b/Lab06.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create Lists for [Item, Quantity, Price] with 10 random values of your choice\n",
+    "* Prepare a CSV file with combinations of these values with the help of random index & looping statements and other control structures we discussed in class.\n",
+    "#  you need to compute\n",
+    "* The total cost for each row, display the result from the first 5 rows and the last 10 rows\n",
+    "* Calculate the total cost for each unique item in the dataset.\n",
+    "*  Item Name | Total Quantity | Total\n",
+    "*  Print the minimum & maximum price for each item sold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create Lists for [Item, Quantity, Price] with 10 random values of your choice"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
