--- a/Lab07.ipynb
+++ b/Lab07.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create a method in the class to export the detils in the from of CSV\n",
+    "* Record a minimum of 10 items for income & expense & complete the question \"Create a method in the class to export the detils in the from of CSV\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
