--- a/Lab08.ipynb
+++ b/Lab08.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write a Python program to implement a Stack class that has the following functions\n",
+    "* Push Item\n",
+    "* Pop Item\n",
+    "* Print the Items in the stack\n",
+    "* Size of Stack\n",
+    "* The top item in the stack\n",
+    "* Check if the stack is empty\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
