--- a/Lab02.ipynb
+++ b/Lab02.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# You are asked to create a function to help Alice from Digiterra convert the number she enters. \n",
+    "* Demonstrate the function with various inputs, including required validations. As Data Analysis students, try to bring out some analysis with these numbers!\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
