--- a/Lab05.ipynb
+++ b/Lab05.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write a program for collecting a string from the user and counting the number of vowels.\n",
+    "* Print the total count of vowels\n",
+    "* Print each vowel and its count\n",
+    "* Calculate the percentage of vowels in the given string"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
